setup basic db migration control with flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-spring.r2dbc.url=r2dbc:postgresql://localhost:3306/postgres
-spring.r2dbc.username=toto
-spring.r2dbc.password=toto
+postgres.url=postgresql://localhost:5432/postgres
+# R2DBC
+spring.r2dbc.url=r2dbc:${postgres.url}
+spring.r2dbc.username=postgres
+spring.r2dbc.password=postgres
+# FLYWAY
+spring.flyway.url=jdbc:${postgres.url}
+spring.flyway.user=${spring.r2dbc.username}
+spring.flyway.password=${spring.r2dbc.password}
+# Those two properties enable to clean the DB on each start while in dev
+spring.flyway.clean-disabled=false
+spring.flyway.clean-on-validation-error=true
