--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testImplementation 'org.testcontainers:r2dbc'
     testImplementation "io.rest-assured:rest-assured:$restAssuredVersion"
     testImplementation "io.rest-assured:spring-web-test-client:$restAssuredVersion"
+    testImplementation "io.rest-assured:kotlin-extensions:$restAssuredVersion"
 }
 
 pitest {
