--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     testImplementation "io.rest-assured:rest-assured:$restAssuredVersion"
     testImplementation "io.rest-assured:spring-web-test-client:$restAssuredVersion"
     testImplementation "io.rest-assured:kotlin-extensions:$restAssuredVersion"
+    testImplementation 'io.kotest:kotest-assertions-core:5.5.4'
 }
 
 pitest {
